Closed Bug 110940 Opened 24 years ago Closed 23 years ago

[PATCH]order List ID does not display correctly after change the order

Categories

(Core :: DOM: Editor, defect, P3)

defect

Tracking

()

VERIFIED FIXED
mozilla1.0

People

(Reporter: ftang, Assigned: kinmoz)

Details

(Whiteboard: EDITORBASE+ [adt2])

Attachments

(3 files)

It is related to lack of reflow of the bullet frame . I can reproduce this on 2001111403 trunk build. Reproduce procedure: 1. open composer (or mail composition) 2. type several lines with ENTER to hard break the line. For example, tyep "aaa" in the first line, "bbb" for the second, "ccc", "ddd", "eee", "fff", "ggg" for the 3rd - 7th lines 3. select all the lines 4. click [numbered list] icon or select "Format:List:Numbered" menu 5. the 7 lines will be displayed as 1. aaa 2. bbb 3. ccc 4. ddd 5. eee 6. fff 7. ggg this is ok 6. now, select only the 3-4 lines, and click [->] icon or hit Ctrl + [ key to increase the ident actual result 1. aaa 2. bbb 1. ccc 2. ddd 3. eee 6. fff 7. ggg notice that the id for "fff" and "ggg" is still 6 and 7. If you scroll then it will display as 3 and 4. expect result: 1. aaa 2. bbb 1. ccc 2. ddd 3. eee 3. fff 4. ggg
--> jfrancis..list dude.
Assignee: kin → jfrancis
--> kin - this is probably a layout issue as ftang pointed out.
Assignee: jfrancis → kin
Priority: -- → P3
Target Milestone: --- → mozilla0.9.8
Target Milestone: mozilla0.9.8 → mozilla0.9.9
Whiteboard: EDITORBASE
Looks like an invalidation problem. The layout is correct, if you force a re-paint by placing another window over the top and remove it, then it will display correctly. Marking EDITORBASE+.
Whiteboard: EDITORBASE → EDITORBASE+
Keywords: nsbeta1+
--> mozilla1.0
Status: NEW → ASSIGNED
Target Milestone: mozilla0.9.9 → mozilla1.0
Attached file JS Test Case
Whiteboard: EDITORBASE+ → EDITORBASE+ [adt2]
Attached patch Patch Rev 1Splinter Review
Forcing an invalidate when changing the bullet frame's ordinal seems to fix the problem.
Whiteboard: EDITORBASE+ [adt2] → EDITORBASE+ [adt2] FIX IN HAND, need r=, sr=, and a=
Attachment #76810 - Flags: review+
During my testing I created this test case which seems to expose more serious invalidation/reflow problems that Patch Rev 1 won't fix.
Comment on attachment 76810 [details] [diff] [review] Patch Rev 1 sr=waterson. Please do file another bug (or bugs) on the other issues.
Attachment #76810 - Flags: superreview+
Comment on attachment 76810 [details] [diff] [review] Patch Rev 1 sr=waterson. Please do file another bug (or bugs) on the other issues.
Filed bug 135767 to cover the problems I'm seeing with JS Test Case 2.
Keywords: adt1.0.0
Whiteboard: EDITORBASE+ [adt2] FIX IN HAND, need r=, sr=, and a= → EDITORBASE+ [adt2] FIX IN HAND, need a=
adt1.0.0+ (on ADT's behalf) approval for checkin to 1.0.
Keywords: adt1.0.0adt1.0.0+
Summary: order List ID does not display correctly after change the order → [PATCH]order List ID does not display correctly after change the order
Keywords: approval
Whiteboard: EDITORBASE+ [adt2] FIX IN HAND, need a= → EDITORBASE+ [adt2] FIX IN HAND, waiting for driver approval
Whiteboard: EDITORBASE+ [adt2] FIX IN HAND, waiting for driver approval → EDITORBASE+ [adt2] FIX IN HAND, need a= (waiting for driver approval)
Comment on attachment 76810 [details] [diff] [review] Patch Rev 1 a=asa (on behalf of drivers) for checkin to the 1.0 branch
Attachment #76810 - Flags: approval+
Whiteboard: EDITORBASE+ [adt2] FIX IN HAND, need a= (waiting for driver approval) → EDITORBASE+ [adt2] FIX IN HAND, reviewed and approved
Fixed on TRUNK: mozilla/layout/html/base/src/nsBlockFrame.cpp revision 3.499
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: EDITORBASE+ [adt2] FIX IN HAND, reviewed and approved → EDITORBASE+ [adt2]
Fix checked into MOZILLA_1_0_0_BRANCH: mozilla/layout/html/base/src/nsBlockFrame.cpp revision 3.496.2.3
Keywords: fixed1.0.0
verified in 4/23 trunk build. will also verify on the branch and comment here.
Status: RESOLVED → VERIFIED
verified in 4/23 branch build.
Keywords: verified1.0.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: