Fix for bug 110940 (order List ID does not display correctly after change )

RenumberListsFor() now calls Invalidate() for a bullet frame if it's ordinal is changed.

r=kmcclusk@netscape.com  sr=waterson@netscape.com
adt=jaimejr@netscape.com  a=asa@mozilla.org